# torch-linter

./: README.md  pyproject.toml  pytorch_linter.py
pytorch_linter/: __init__.py  plugin.py
pytorch_linter/checkers/: pytorch_ddp_checker.py
