[tool.poetry]
name = "pytorch-linter"
version = "0.1.0"
description = ""
authors = ["ashishdatta <ashishbdatta@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_linter"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
